Moved all javascript to a .js file. Added some javascript and added lots of comments.

--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ a:hover {
 	text-decoration: underline
 }
 
+#timeButton2{
+	margin-top: 10%;
+}
+
 #magicText{
 	height: 200px;
 	/*background-color: yellow;*/
